syntax = "proto3";

option csharp_namespace = "ScoreTracker.Shared";

import "google/protobuf/timestamp.proto";
import "common.proto";

service Meets {
  rpc GetMeet (MeetRequest) returns (Meet);
  rpc GetMeets (MeetQuery) returns (stream Meet);
}

message MeetRequest {
  string MeetId = 1;
}

message MeetQuery {
  string Name = 1;
  google.protobuf.Timestamp StartDate = 2;
  google.protobuf.Timestamp EndDate = 3;
  int32 Year = 4;
  StateCode StateCode = 5;
  string City = 6;
  Discipline Discipline = 7;
}

message Meet {
  string Id = 1;
  string Name = 2;
  int32 Season = 3;
  google.protobuf.Timestamp StartDate = 4;
  google.protobuf.Timestamp EndDate = 5;
  repeated Session Sessions = 6;
  repeated Level Levels = 7;
  StateCode State = 8;
  Discipline Discipline = 9;
}

message Session {
  string Id = 1;
  string Name = 2;
}

message Level {
  string Name = 2;
  string Abbreviation = 3;
  repeated Division Divisions = 4;
}